# refactor-stats-maker

./: CHANGELOG.md  README.md  cliff.toml  pyproject.toml
refactor_stats_maker/: __main__.py  repository_helpers.py  stats_helpers.py
tests/: refactors.json  test_main.py  test_repository_helpers.py  test_stats_helpers.py
tests/test_repository/src/views/management/: ScreenManagementGatekeeper.vue
tests/test_repository/src/views/works/: ScreenWorks.vue
