[tool.poetry]
name = "refactor-stats-maker"
version = "0.2.0"
description = ""
authors = ["Tiago Pereira <tiago.pereira@infraspeak.com>"]
readme = "README.md"
packages = [{ include = "refactor_stats_maker" }]

[tool.poetry.dependencies]
python = "^3.11"
codeowners = "^0.6.0"
ripgrepy = "^2.0.0"
plotext = "^5.2.8"
pyperclip = "^1.8.2"
gitpython = "^3.1.40"
platformdirs = "^3.11.0"
halo = "^0.0.31"
black = "^23.10.1"
pytest-watch = "^4.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"refactor-stats-maker" = "refactor_stats_maker.__main__:run"
